[package]
name = "tlv320dac3100"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D. Baker <jonathan@ardent.tech>"]
description = "A driver for the Texas Instruments TLV320DAC3100 module."
keywords = ["embedded", "embedded-hal-driver", "dac", "analog", "digital"]
categories = ["embedded", "no-std"]
repository = "https://github.com/ardentTech/tlv320dac3100"
license = "MIT OR Apache-2.0"
exclude = ["CHANGELOG.md", "tests/*"]
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = ["eh1"] }

[profile.release]
overflow-checks = true